[metadata]
name = easyisp
author = Sangmin Kim
author_email = sangmin.kim@enerzai.com
url = https://github.com/ENERZAi/EasyISP
description = EasyISP : ENERZAi ISP Tool
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
keywords = easy, ezie, isp, qa

[options]
zip_safe = False
include_package_data = True